Changes to be committed: Changed the nav bar poisition  to be fixed at the top of the page  - added a function to collapse nav bar back when a link is clicked 	modified:   index.html 	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,23 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #660c0aeb;
+  background-color: #770e05df; /*#660c0aeb or #e68b0ceb*/
   position: relative;
   background-image: url("shrimpimg.png");
   background-repeat: repeat;
   background-size: 150px 150px;
 }
 
+.title-container{
+      background-color: #FFA500;
+      text-align: center;
+      color: white;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
 .angled-pattern {
+  margin-top:60px;
   width: 100%;
   height: 50px;
   background: repeating-linear-gradient(
@@ -46,15 +55,20 @@ img {
 }
 
 .title {
-  text-align: center;
-  font-size: 25px;
-  margin-top: 135px;
+  margin-top: 100px;
+  font-weight: bold;
+  font-size: 30px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color:black;
 }
 
 .info{
   text-align: center;
-  font-size: 15px;
+  font-size: 20px;
   margin-top: 30px;
+  color:black;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .food-container {
@@ -70,12 +84,28 @@ img {
 h1, .welcome-message {
   color: var(--default-color);
   font-size: 50px;
-  color: rgb(247, 244, 241);
   font-family: "Times New Roman", Times, serif;
   margin-right: 0;
 }
 
+.navbar
+{
+  top:0;
+  right:0;
+  left:0;
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  background-color: #FFA500;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  max-width: 100%; /* Make sure it spans the entire width */
+  margin: 0 auto; /* Ensure it's centered horizontally */
+}
 .welcome-message{
+  color: rgb(247, 244, 241);
   font-size: 30px;
   margin-top: 20px;
   text-align: center;
